--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,16 @@ body {
     border-radius: 50%;
     margin-right: 1rem; }
 
+.side-nav__icon {
+  width: 1.75rem;
+  height: 1.75rem; }
+
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-Grey-light-4);
+  text-align: center;
+  padding: 2.5rem; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -131,11 +141,15 @@ body {
 .content {
   display: flex; }
 
-.nav-sidebar {
+.sidebar {
   background-color: var(--color-Grey-dark-1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   flex: 0 0 18%; }
 
-.main-hotel-view {
+.hotel-view {
   background-color: #fff;
   color: black;
+  height: 80rem;
   flex: 1; }
