--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -23,15 +23,19 @@
     display: flex;
 }
 
-.nav-sidebar {
+.sidebar {
     background-color: var(--color-Grey-dark-1);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     flex: 0 0 18%;
 }
 
-.main-hotel-view {
+.hotel-view {
     background-color: #fff;
     color: black;
-
+    height: 80rem;
     flex: 1;
 }
