--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -113,18 +113,60 @@
 
 // side navigation
 .side-nav {
+     font-size: 1.4rem;
+     list-style: none;
+     margin-top: 3.5rem;
 
-    &__item {
+     &__item {
+        position: relative;
 
+        &:not(:last-child) {
+            margin-bottom: .5rem;
+        }
     }
 
-    &__link {
+    &__item::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 3px;
+        background-color: var(--color-Primary);
+        transform: scaleY(0);
+        transition: transform .2s,
+                    width .4s cubic-bezier(1,0,0,1) .2s,
+                    background-color .1s;
+    }
 
+    &__item:hover::before,
+    &__item--active::before {
+        transform: scaleY(1);
+        width: 100%;
+    }
+    
+    &__item:active::before {
+        background-color: var(--color-Primary-light);
+    }
+
+    &__link:link,
+    &__link:visited {
+        color: var(--color-Grey-light-1);
+        text-decoration: none;
+        text-transform: uppercase;
+        display: block;
+        padding: 1.5rem 3rem;
+        z-index: 10;
+        position: relative;
+        display: flex;
+        align-items: center;
     }
 
     &__icon {
         width: 1.75rem;
         height: 1.75rem;
+        margin-right: 2rem;
+        fill: currentColor;
     }
 }
 
@@ -134,6 +176,5 @@
     color: var(--color-Grey-light-4);
     text-align: center;
     padding: 2.5rem;
-
 
 }
