added hotel overview elements

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -34,8 +34,7 @@
 }
 
 .hotel-view {
-    background-color: #fff;
-    color: black;
+    background-color: black;
     height: 80rem;
     flex: 1;
 }
