--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,21 @@ body {
   text-align: center;
   padding: 2.5rem; }
 
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    width: 100%;
+    display: block; }
+
+.overview {
+  display: flex; }
+  .overview__stars {
+    margin-right: auto; }
+  .overview__icon-star, .overview__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-Primary); }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -184,7 +199,6 @@ body {
   flex: 0 0 18%; }
 
 .hotel-view {
-  background-color: #fff;
-  color: black;
+  background-color: black;
   height: 80rem;
   flex: 1; }
