--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,7 +10,7 @@
 .header {
     height: 7rem;
     background-color: #fff;
-    border-bottom: var(--color-Grey-light-1);
+    border-bottom: 1px solid var(--color-Grey-light-1);
     color: black;
     font-size: 1.4rem;
 
@@ -34,7 +34,7 @@
 }
 
 .hotel-view {
-    background-color: black;
+    background-color: #FFF;
     height: 80rem;
     flex: 1;
 }
