--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@
   --color-Grey-dark-1: #333;
   --color-Grey-dark-2: #777;
   --color-Grey-dark-3: #999;
-  --shadow-box: 0 2rem 6rem rgba(0, 0, 0, .3); }
+  --shadow-box: 0 2rem 6rem rgba(0, 0, 0, .3);
+  --shadow-light: 0 2rem 5rem rgba(0,0,0, .06);
+  --line: 1px solid var(--color-Grey-light-1); }
 
 * {
   margin: 0;
@@ -260,5 +262,23 @@ body {
 
 .hotel-view {
   background-color: #FFF;
-  height: 80rem;
+  flex: 1; }
+
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--color-Grey-light-1);
+  border-bottom: var(--line); }
+
+.description {
+  background-color: #FFF;
+  color: var(--color-Grey-dark-1);
+  font-size: 1.4rem;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  flex: 0 0 60%;
+  margin-right: 4.5rem; }
+
+.user-reviews {
+  background-color: yellowgreen;
   flex: 1; }
