--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -35,6 +35,27 @@
 
 .hotel-view {
     background-color: #FFF;
-    height: 80rem;
+    flex: 1;
+}
+
+.detail {
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-Grey-light-1);
+    border-bottom: var(--line);
+}
+
+.description {
+    background-color: #FFF;
+    color: var(--color-Grey-dark-1);
+    font-size: 1.4rem;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+}
+
+.user-reviews {
+    background-color: yellowgreen;
     flex: 1;
 }
