--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -426,3 +426,63 @@
         line-height: 1;
     }
 }
+
+// CTA
+.cta {
+    padding: 3.5rem 0;
+    text-align: center;
+
+    &__book-now {
+        font-size: 2rem;
+        font-weight: 300;
+        margin-bottom: 2.5rem;
+        text-transform: uppercase;
+        color: var(--color-Grey-dark-1);
+    }
+}
+
+.btn {
+        overflow: hidden;
+        position: relative;
+        font-size: 1.5rem;
+        border: none;
+        text-transform: uppercase;
+        font-weight: 300;
+        border-radius: 100px;
+        background-image: linear-gradient(to right, var(--color-Primary-light), var(--color-Primary-dark));
+        color: #FFF;
+        cursor: pointer;
+    & > * {
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        transition: all .2s;
+    }
+
+    &__visible {
+        padding: 2rem 7.5rem;
+    }
+
+    &__invisible {
+        position: absolute;
+        left: 0;
+        top: -100%;
+        padding: 2rem 0;
+    }
+
+    &:hover {
+        background-image: linear-gradient(to left, var(--color-Primary-light), var(--color-Primary-dark));        
+    }
+    &:hover &__visible{
+        transform: translateY(100%);
+    }
+        
+    &:hover &__invisible {
+        top: 0;
+    }
+
+    &:focus {
+        outline: none;
+        animation: pulsate 1s infinite;
+    }
+}
